# btc-wallet-rust

./: Cargo.toml  README.md
.github/workflows/: CD.yml
src/: main.rs
src/core/: generate.rs  mod.rs  wallet.rs
src/utils/: args.rs  hash.rs  mod.rs  print_mode.rs
